--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">MedAlert</string>
+    <string name="search_meds">Search Medications</string>
+    <string name="calendar">Calendar</string>
+    <string name="medication">Medications</string>
+    <string name="alerts">Alerts</string>
+    <string name="my_stats">My Stats</string>
+    <string name="today">Today</string>
+    <string name="Home">Home</string>
+    <string name="Profile">Profile</string>
+    <string name="settings">Settings</string>
 </resources>
